Estructura terminada con navegacion por Sweep vertical y horizontal

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -751,6 +751,19 @@
           "optimized": false,
           "height": 46,
           "width": 346
+        },
+        "6da1e2d2": {
+          "id": "6da1e2d2",
+          "path": "img/legal_free_mobil.png",
+          "output": "img/legal_free_mobil.png",
+          "name": "legal_free_mobil.png",
+          "category": "IMAGE",
+          "size": 4716,
+          "type": "png",
+          "initialSize": 4716,
+          "optimized": false,
+          "height": 46,
+          "width": 310
         }
       },
       "deploymentHistory": {},
