Se logro instanciar el objeto para la muestra de videos

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -764,6 +764,21 @@
           "optimized": false,
           "height": 46,
           "width": 310
+        },
+        "c551c899": {
+          "id": "c551c899",
+          "path": "js/jquery-1.8.3.min.js",
+          "output": "js/jquery-1.8.3.min-dist.js",
+          "name": "jquery-1.8.3.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
