se configuro y animo el boton par abrir el menu contextual escondido

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -779,6 +779,19 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "d5b4ac1d": {
+          "id": "d5b4ac1d",
+          "path": "img/rayita.png",
+          "output": "img/rayita.png",
+          "name": "rayita.png",
+          "category": "IMAGE",
+          "size": 973,
+          "type": "png",
+          "initialSize": 973,
+          "optimized": false,
+          "height": 3,
+          "width": 22
         }
       },
       "deploymentHistory": {},
