Maquetado de la seccion Aprende

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -792,6 +792,19 @@
           "optimized": false,
           "height": 3,
           "width": 22
+        },
+        "0537a339": {
+          "id": "0537a339",
+          "path": "img/icon_acordeon.png",
+          "output": "img/icon_acordeon.png",
+          "name": "icon_acordeon.png",
+          "category": "IMAGE",
+          "size": 9098,
+          "type": "png",
+          "initialSize": 9098,
+          "optimized": false,
+          "height": 860,
+          "width": 29
         }
       },
       "deploymentHistory": {},
