Maquetado y animado del wraning al poner el device en Landscape

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -805,6 +805,32 @@
           "optimized": false,
           "height": 860,
           "width": 29
+        },
+        "432a0e23": {
+          "id": "432a0e23",
+          "path": "img/fondoP4.jpg",
+          "output": "img/fondoP4.jpg",
+          "name": "fondoP4.jpg",
+          "category": "IMAGE",
+          "size": 61285,
+          "type": "jpg",
+          "initialSize": 61285,
+          "optimized": false,
+          "height": 960,
+          "width": 640
+        },
+        "ca38762d": {
+          "id": "ca38762d",
+          "path": "img/iconoMobile.png",
+          "output": "img/iconoMobile.png",
+          "name": "iconoMobile.png",
+          "category": "IMAGE",
+          "size": 1075,
+          "type": "png",
+          "initialSize": 1075,
+          "optimized": false,
+          "height": 244,
+          "width": 170
         }
       },
       "deploymentHistory": {},
