agrege anchor al boton del home para que baje a la siguiente pagina

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -825,12 +825,25 @@
           "output": "img/iconoMobile.png",
           "name": "iconoMobile.png",
           "category": "IMAGE",
-          "size": 1075,
+          "size": 15890,
           "type": "png",
-          "initialSize": 1075,
+          "initialSize": 15890,
           "optimized": false,
           "height": 244,
           "width": 170
+        },
+        "abe0b94c": {
+          "id": "abe0b94c",
+          "path": "img/iconCelular.png",
+          "output": "img/iconCelular.png",
+          "name": "iconCelular.png",
+          "category": "IMAGE",
+          "size": 15054,
+          "type": "png",
+          "initialSize": 15054,
+          "optimized": false,
+          "height": 26,
+          "width": 15
         }
       },
       "deploymentHistory": {},
