Textos Actualizados con los Ultimos JPPG de Joaquin

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -844,6 +844,19 @@
           "optimized": false,
           "height": 26,
           "width": 15
+        },
+        "a504eb08": {
+          "id": "a504eb08",
+          "path": "img/iconoRecargaAzul.png",
+          "output": "img/iconoRecargaAzul.png",
+          "name": "iconoRecargaAzul.png",
+          "category": "IMAGE",
+          "size": 1164,
+          "type": "png",
+          "initialSize": 1164,
+          "optimized": false,
+          "height": 26,
+          "width": 26
         }
       },
       "deploymentHistory": {},
