Recupere todo - Proyecto Estable

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -845,6 +845,45 @@
           "height": 26,
           "width": 15
         },
+        "a4ca4d11": {
+          "id": "a4ca4d11",
+          "path": "img/iconoEnviaAzul.png",
+          "output": "img/iconoEnviaAzul.png",
+          "name": "iconoEnviaAzul.png",
+          "category": "IMAGE",
+          "size": 1261,
+          "type": "png",
+          "initialSize": 1261,
+          "optimized": false,
+          "height": 26,
+          "width": 26
+        },
+        "3cbb3f52": {
+          "id": "3cbb3f52",
+          "path": "img/iconoGuardarAzul.png",
+          "output": "img/iconoGuardarAzul.png",
+          "name": "iconoGuardarAzul.png",
+          "category": "IMAGE",
+          "size": 1093,
+          "type": "png",
+          "initialSize": 1093,
+          "optimized": false,
+          "height": 26,
+          "width": 26
+        },
+        "6ee69140": {
+          "id": "6ee69140",
+          "path": "img/iconoPagaAzul.png",
+          "output": "img/iconoPagaAzul.png",
+          "name": "iconoPagaAzul.png",
+          "category": "IMAGE",
+          "size": 1348,
+          "type": "png",
+          "initialSize": 1348,
+          "optimized": false,
+          "height": 26,
+          "width": 26
+        },
         "a504eb08": {
           "id": "a504eb08",
           "path": "img/iconoRecargaAzul.png",
@@ -854,6 +893,45 @@
           "size": 1164,
           "type": "png",
           "initialSize": 1164,
+          "optimized": false,
+          "height": 26,
+          "width": 26
+        },
+        "9969d4fa": {
+          "id": "9969d4fa",
+          "path": "img/iconoRecibosAzul.png",
+          "output": "img/iconoRecibosAzul.png",
+          "name": "iconoRecibosAzul.png",
+          "category": "IMAGE",
+          "size": 1412,
+          "type": "png",
+          "initialSize": 1412,
+          "optimized": false,
+          "height": 26,
+          "width": 26
+        },
+        "a38e41c5": {
+          "id": "a38e41c5",
+          "path": "img/iconoTrnasfiereAzul.png",
+          "output": "img/iconoTrnasfiereAzul.png",
+          "name": "iconoTrnasfiereAzul.png",
+          "category": "IMAGE",
+          "size": 1205,
+          "type": "png",
+          "initialSize": 1205,
+          "optimized": false,
+          "height": 26,
+          "width": 26
+        },
+        "9d555551": {
+          "id": "9d555551",
+          "path": "img/iconSaldoAzul.png",
+          "output": "img/iconSaldoAzul.png",
+          "name": "iconSaldoAzul.png",
+          "category": "IMAGE",
+          "size": 1649,
+          "type": "png",
+          "initialSize": 1649,
           "optimized": false,
           "height": 26,
           "width": 26
