Se modificaron los estilos de la seccion de Aprende para iPhone

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -929,12 +929,103 @@
           "output": "img/iconSaldoAzul.png",
           "name": "iconSaldoAzul.png",
           "category": "IMAGE",
-          "size": 1649,
+          "size": 15637,
           "type": "png",
-          "initialSize": 1649,
+          "initialSize": 15637,
           "optimized": false,
           "height": 26,
           "width": 26
+        },
+        "14fa259f": {
+          "id": "14fa259f",
+          "path": "img/iconSaldoAzul1.png",
+          "output": "img/iconSaldoAzul1.png",
+          "name": "iconSaldoAzul1.png",
+          "category": "IMAGE",
+          "size": 15868,
+          "type": "png",
+          "initialSize": 15868,
+          "optimized": false,
+          "height": 20,
+          "width": 20
+        },
+        "7bc4548d": {
+          "id": "7bc4548d",
+          "path": "img/iconoEnviaAzul1.png",
+          "output": "img/iconoEnviaAzul1.png",
+          "name": "iconoEnviaAzul1.png",
+          "category": "IMAGE",
+          "size": 15159,
+          "type": "png",
+          "initialSize": 15159,
+          "optimized": false,
+          "height": 18,
+          "width": 18
+        },
+        "814ef676": {
+          "id": "814ef676",
+          "path": "img/iconoPagaAzul1.png",
+          "output": "img/iconoPagaAzul1.png",
+          "name": "iconoPagaAzul1.png",
+          "category": "IMAGE",
+          "size": 15279,
+          "type": "png",
+          "initialSize": 15279,
+          "optimized": false,
+          "height": 20,
+          "width": 20
+        },
+        "6779fce0": {
+          "id": "6779fce0",
+          "path": "img/iconoRecibosAzul1.png",
+          "output": "img/iconoRecibosAzul1.png",
+          "name": "iconoRecibosAzul1.png",
+          "category": "IMAGE",
+          "size": 15276,
+          "type": "png",
+          "initialSize": 15276,
+          "optimized": false,
+          "height": 20,
+          "width": 20
+        },
+        "6c66178a": {
+          "id": "6c66178a",
+          "path": "img/iconoTrnasfiereAzul1.png",
+          "output": "img/iconoTrnasfiereAzul1.png",
+          "name": "iconoTrnasfiereAzul1.png",
+          "category": "IMAGE",
+          "size": 15185,
+          "type": "png",
+          "initialSize": 15185,
+          "optimized": false,
+          "height": 20,
+          "width": 20
+        },
+        "9c3d4b4f": {
+          "id": "9c3d4b4f",
+          "path": "img/iconoGuardarAzul1.png",
+          "output": "img/iconoGuardarAzul1.png",
+          "name": "iconoGuardarAzul1.png",
+          "category": "IMAGE",
+          "size": 15590,
+          "type": "png",
+          "initialSize": 15590,
+          "optimized": false,
+          "height": 19,
+          "width": 16
+        },
+        "6b510cc1": {
+          "id": "6b510cc1",
+          "path": "img/iconoRecargaAzul1.png",
+          "output": "img/iconoRecargaAzul1.png",
+          "name": "iconoRecargaAzul1.png",
+          "category": "IMAGE",
+          "size": 15813,
+          "type": "png",
+          "initialSize": 15813,
+          "optimized": false,
+          "height": 18,
+          "width": 18
         }
       },
       "deploymentHistory": {},
