Se modificaron los estilos de la ultima vista para iPhone

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -793,19 +793,6 @@
           "height": 3,
           "width": 22
         },
-        "0537a339": {
-          "id": "0537a339",
-          "path": "img/icon_acordeon.png",
-          "output": "img/icon_acordeon.png",
-          "name": "icon_acordeon.png",
-          "category": "IMAGE",
-          "size": 9098,
-          "type": "png",
-          "initialSize": 9098,
-          "optimized": false,
-          "height": 860,
-          "width": 29
-        },
         "432a0e23": {
           "id": "432a0e23",
           "path": "img/fondoP4.jpg",
@@ -1026,6 +1013,110 @@
           "optimized": false,
           "height": 18,
           "width": 18
+        },
+        "c28094b9": {
+          "id": "c28094b9",
+          "path": "img/iconCandado1.png",
+          "output": "img/iconCandado1.png",
+          "name": "iconCandado1.png",
+          "category": "IMAGE",
+          "size": 15637,
+          "type": "png",
+          "initialSize": 15637,
+          "optimized": false,
+          "height": 19,
+          "width": 14
+        },
+        "a09cfb17": {
+          "id": "a09cfb17",
+          "path": "img/iconCelular1.png",
+          "output": "img/iconCelular1.png",
+          "name": "iconCelular1.png",
+          "category": "IMAGE",
+          "size": 15542,
+          "type": "png",
+          "initialSize": 15542,
+          "optimized": false,
+          "height": 20,
+          "width": 12
+        },
+        "d95cf426": {
+          "id": "d95cf426",
+          "path": "img/iconMaletin1.png",
+          "output": "img/iconMaletin1.png",
+          "name": "iconMaletin1.png",
+          "category": "IMAGE",
+          "size": 15142,
+          "type": "png",
+          "initialSize": 15142,
+          "optimized": false,
+          "height": 15,
+          "width": 20
+        },
+        "f3af261d": {
+          "id": "f3af261d",
+          "path": "img/iconMundo1.png",
+          "output": "img/iconMundo1.png",
+          "name": "iconMundo1.png",
+          "category": "IMAGE",
+          "size": 15825,
+          "type": "png",
+          "initialSize": 15825,
+          "optimized": false,
+          "height": 18,
+          "width": 18
+        },
+        "8f25a99d": {
+          "id": "8f25a99d",
+          "path": "img/iconSMS1.png",
+          "output": "img/iconSMS1.png",
+          "name": "iconSMS1.png",
+          "category": "IMAGE",
+          "size": 15379,
+          "type": "png",
+          "initialSize": 15379,
+          "optimized": false,
+          "height": 19,
+          "width": 20
+        },
+        "eb1ab435": {
+          "id": "eb1ab435",
+          "path": "img/iconSMS.png",
+          "output": "img/iconSMS.png",
+          "name": "iconSMS.png",
+          "category": "IMAGE",
+          "size": 15413,
+          "type": "png",
+          "initialSize": 15413,
+          "optimized": false,
+          "height": 22,
+          "width": 23
+        },
+        "769195df": {
+          "id": "769195df",
+          "path": "img/numerosIcon.png",
+          "output": "img/numerosIcon.png",
+          "name": "numerosIcon.png",
+          "category": "IMAGE",
+          "size": 3000,
+          "type": "png",
+          "initialSize": 3000,
+          "optimized": false,
+          "height": 200,
+          "width": 24
+        },
+        "0537a339": {
+          "id": "0537a339",
+          "path": "img/icon_acordeon.png",
+          "output": "img/icon_acordeon.png",
+          "name": "icon_acordeon.png",
+          "category": "IMAGE",
+          "size": 26801,
+          "type": "png",
+          "initialSize": 26801,
+          "optimized": false,
+          "height": 712,
+          "width": 24
         }
       },
       "deploymentHistory": {},
