--- a/prepros.cfg
+++ b/prepros.cfg
@@ -61,9 +61,9 @@
           "output": "img/tresrayas.jpg",
           "name": "tresrayas.jpg",
           "category": "IMAGE",
-          "size": 2343,
+          "size": 1848,
           "type": "jpg",
-          "initialSize": 2343,
+          "initialSize": 1848,
           "optimized": false,
           "height": 88,
           "width": 90
@@ -1159,6 +1159,19 @@
           "optimized": false,
           "height": 80,
           "width": 160
+        },
+        "3082f430": {
+          "id": "3082f430",
+          "path": "img/equis.jpg",
+          "output": "img/equis.jpg",
+          "name": "equis.jpg",
+          "category": "IMAGE",
+          "size": 2058,
+          "type": "jpg",
+          "initialSize": 2058,
+          "optimized": false,
+          "height": 88,
+          "width": 90
         }
       },
       "deploymentHistory": {},
